Add JVM-argument --add-opens to fix Reload Configurations classloading issue
* Also ignore IntelliJ folder for Git